--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,8 @@
   "description": "",
   "type": "project",
   "keywords": [],
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "repositories": [
     {
       "type": "composer",
@@ -14,8 +16,8 @@
     }
   ],
   "require": {
-    "php": ">=7.3",
-    "composer/installers": "^1.3.0",
+    "php": ">=7.4 || >= 8.0",
+    "composer/installers": "*",
     "pantheon-systems/quicksilver-pushback": "^2",
     "pantheon-systems/wordpress-composer": "*",
     "roots/wp-password-bcrypt": "^1.0.0",
@@ -31,11 +33,11 @@
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
     "dmore/behat-chrome-extension": "^1.2",
     "genesis/behat-fail-aid": "^2.1",
-    "paulgibbs/behat-wordpress-extension": "^3.3.0",
-    "phpunit/phpunit": "^7.5.1",
+    "humanmade/coding-standards": "^1.2",
+    "phpunit/phpunit": "^9.5",
     "roave/security-advisories": "dev-master",
     "squizlabs/php_codesniffer": "^3.4.0",
-    "wp-coding-standards/wpcs": "^1.2.1"
+    "wp-coding-standards/wpcs": "^2.3"
   },
   "config": {
     "vendor-dir": "vendor",
@@ -43,7 +45,7 @@
     "optimize-autoloader": true,
     "sort-packages": true,
     "platform": {
-      "php": "7.3"
+      "php": "8.0"
     },
     "allow-plugins": {
       "composer/installers": true,
