--- a/composer.json
+++ b/composer.json
@@ -35,9 +35,7 @@
     "genesis/behat-fail-aid": "^2.1",
     "humanmade/coding-standards": "^1.2",
     "phpunit/phpunit": "^9.5",
-    "roave/security-advisories": "dev-master",
-    "squizlabs/php_codesniffer": "^3.4.0",
-    "wp-coding-standards/wpcs": "^2.3"
+    "roave/security-advisories": "dev-master"
   },
   "config": {
     "vendor-dir": "vendor",
