--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "pantheon-systems/wordpress-composer": "*",
     "roots/wp-password-bcrypt": "^1.0.0",
     "vlucas/phpdotenv": "^3.1.0",
+    "wpackagist-plugin/altis-accelerate": "^0.7.3",
     "wpackagist-plugin/lh-hsts": "^1.24",
     "wpackagist-plugin/pantheon-advanced-page-cache": ">=0.3.0",
     "wpackagist-plugin/wp-native-php-sessions": ">=0.6.9",
