--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   "require": {
     "php": ">=7.4 || >= 8.0",
     "composer/installers": "*",
-    "jazzsequence/altis-cms": "v12-beta1",
+    "jazzsequence/altis-cms": "^12.0-beta2",
     "pantheon-systems/pantheon-mu-plugin": "^1.0",
     "pantheon-systems/quicksilver-pushback": "^2",
     "pantheon-systems/wordpress-composer": "*",
