autoload the altis-cms plugin file

--- a/composer.json
+++ b/composer.json
@@ -74,6 +74,9 @@
     }
   },
   "autoload": {
+    "files": [
+      "vendor/jazzsequence/altis-cms/plugin.php"
+    ],
     "classmap": [
       "scripts/composer/ScriptHandler.php"
     ],
