--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ web/wp-content/plugins/lh-hsts/
 web/wp-content/plugins/pantheon-advanced-page-cache/
 web/wp-content/plugins/wp-native-php-sessions/
 # Ignore Altis things
+web/wp-content/mu-plugins/altis-cms/
 web/wp-content/plugins/altis-accelerate/
 web/wp-content/plugins/altis-reusable-blocks/
 web/wp-content/plugins/asset-loader/
