--- a/composer.json
+++ b/composer.json
@@ -92,13 +92,13 @@
       "@cleanup",
       "WordPressProject\\composer\\ScriptHandler::createRequiredFiles",
       "@delete-muplugin",
-      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms"
+      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --ignore-platform-reqs"
     ],
     "post-update-cmd": [
       "@cleanup",
       "WordPressProject\\composer\\ScriptHandler::createRequiredFiles",
       "@delete-muplugin",
-      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms"
+      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --ignore-platform-reqs"
     ],
     "post-create-project-cmd": [
       "@cleanup",
