--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,16 @@
     {
       "type": "vcs",
       "url": "https://github.com/pantheon-systems/wordpress-composer"
+    },
+    {
+      "type": "vcs",
+      "url": "git@github.com:jazzsequence/altis-cms.git"
     }
   ],
   "require": {
     "php": ">=7.4 || >= 8.0",
     "composer/installers": "*",
+    "jazzsequence/altis-cms": "^12.0-beta4",
     "pantheon-systems/pantheon-mu-plugin": "^1.0",
     "pantheon-systems/quicksilver-pushback": "^2",
     "pantheon-systems/wordpress-composer": "*",
@@ -86,12 +91,14 @@
     "post-install-cmd": [
       "@cleanup",
       "WordPressProject\\composer\\ScriptHandler::createRequiredFiles",
-      "@delete-muplugin"
+      "@delete-muplugin",
+      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --ignore-platform-reqs"
     ],
     "post-update-cmd": [
       "@cleanup",
       "WordPressProject\\composer\\ScriptHandler::createRequiredFiles",
-      "@delete-muplugin"
+      "@delete-muplugin",
+      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --ignore-platform-reqs"
     ],
     "post-create-project-cmd": [
       "@cleanup",
