--- a/.gitignore
+++ b/.gitignore
@@ -49,6 +49,8 @@ web/wp-content/plugins/altis-accelerate/
 web/wp-content/plugins/altis-reusable-blocks/
 web/wp-content/plugins/asset-loader/
 web/wp-content/plugins/authorship/
+web/wp-content/plugins/debug-bar-elasticpress/
+web/wp-content/plugins/elasticpress/
 web/wp-content/plugins/simple-local-avatars/
 web/wp-content/plugins/wp-user-signups/
 
