--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
   "require": {
     "php": ">=7.4 || >= 8.0",
     "composer/installers": "*",
+    "altis/enhanced-search": "^13.0.0-beta.1",
     "humanmade/cavalcade": "^2.0",
     "jazzsequence/altis-cms": "^12.0-beta4",
     "pantheon-systems/pantheon-mu-plugin": "^1.0",
