install amf dependencies

--- a/composer.json
+++ b/composer.json
@@ -95,13 +95,15 @@
       "@cleanup",
       "WordPressProject\\composer\\ScriptHandler::createRequiredFiles",
       "@delete-muplugin",
-      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --ignore-platform-reqs"
+      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --ignore-platform-reqs",
+      "composer install --working-dir=web/wp-content/plugins/amf-wordpress --ignore-platform-reqs"
     ],
     "post-update-cmd": [
       "@cleanup",
       "WordPressProject\\composer\\ScriptHandler::createRequiredFiles",
       "@delete-muplugin",
-      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --ignore-platform-reqs"
+      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --ignore-platform-reqs",
+      "composer install --working-dir=web/wp-content/plugins/amf-wordpress --ignore-platform-reqs"
     ],
     "post-create-project-cmd": [
       "@cleanup",
