--- a/composer.json
+++ b/composer.json
@@ -98,14 +98,12 @@
     "post-install-cmd": [
       "@cleanup",
       "WordPressProject\\composer\\ScriptHandler::createRequiredFiles",
-      "@delete-muplugin",
-      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --ignore-platform-reqs"
+      "@delete-muplugin"
     ],
     "post-update-cmd": [
       "@cleanup",
       "WordPressProject\\composer\\ScriptHandler::createRequiredFiles",
-      "@delete-muplugin",
-      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --ignore-platform-reqs"
+      "@delete-muplugin"
     ],
     "post-create-project-cmd": [
       "@cleanup",
