--- a/.gitignore
+++ b/.gitignore
@@ -47,11 +47,18 @@ web/wp-content/mu-plugins/altis-cms/
 web/wp-content/mu-plugins/cavalcade/
 web/wp-content/plugins/altis-accelerate/
 web/wp-content/plugins/altis-reusable-blocks/
+web/wp-content/plugins/amf-wordpress/
 web/wp-content/plugins/asset-loader/
+web/wp-content/plugins/asset-manager-framework/
 web/wp-content/plugins/authorship/
+web/wp-content/plugins/aws-rekognition/
 web/wp-content/plugins/debug-bar-elasticpress/
 web/wp-content/plugins/elasticpress/
+web/wp-content/plugins/gaussholder/
+web/wp-content/plugins/safe-svg/
 web/wp-content/plugins/simple-local-avatars/
+web/wp-content/plugins/smart-media/
+web/wp-content/plugins/tachyon-plugin/
 web/wp-content/plugins/wp-user-signups/
 
 # Packages #
