--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,11 @@
     "php": ">=7.4 || >= 8.0",
     "composer/installers": "*",
     "altis/enhanced-search": "^13.0.0-beta.1",
+    "darylldoyle/safe-svg": "2.0.1",
     "humanmade/cavalcade": "^2.0",
+    "humanmade/tachyon-plugin": "~0.11.5",
+    "humanmade/gaussholder": "^1.1.3",
+    "humanmade/rename-images-command": "^0.1.0",
     "jazzsequence/altis-cms": "^12.0-beta4",
     "pantheon-systems/pantheon-mu-plugin": "^1.0",
     "pantheon-systems/quicksilver-pushback": "^2",
@@ -35,6 +39,9 @@
     "wpackagist-plugin/pantheon-advanced-page-cache": ">=0.3.0",
     "wpackagist-plugin/wp-native-php-sessions": ">=0.6.9",
     "wpackagist-theme/twentynineteen": "^1.2"
+  },
+  "suggest": {
+    "humanmade/amf-wordpress": "Asset Manager Framework for WordPress. Turn your multisite into a digital asset manager."
   },
   "require-dev": {
     "behat/mink-goutte-driver": "^1.2.1",
@@ -93,14 +100,12 @@
     "post-install-cmd": [
       "@cleanup",
       "WordPressProject\\composer\\ScriptHandler::createRequiredFiles",
-      "@delete-muplugin",
-      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --ignore-platform-reqs"
+      "@delete-muplugin"
     ],
     "post-update-cmd": [
       "@cleanup",
       "WordPressProject\\composer\\ScriptHandler::createRequiredFiles",
-      "@delete-muplugin",
-      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --ignore-platform-reqs"
+      "@delete-muplugin"
     ],
     "post-create-project-cmd": [
       "@cleanup",
