require the Consent plugin this is pretty much the entirety of the Altis Privacy module

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ web/wp-content/plugins/asset-loader/
 web/wp-content/plugins/asset-manager-framework/
 web/wp-content/plugins/authorship/
 web/wp-content/plugins/aws-rekognition/
+web/wp-content/plugins/consent-api/
 web/wp-content/plugins/debug-bar-elasticpress/
 web/wp-content/plugins/elasticpress/
 web/wp-content/plugins/gaussholder/
