--- a/composer.json
+++ b/composer.json
@@ -21,13 +21,14 @@
   ],
   "require": {
     "php": ">=7.4 || >= 8.0",
-    "composer/installers": "*",
+    "altis/consent": "^1.0",
     "altis/enhanced-search": "^13.0.0-beta.1",
+    "composer/installers": "*",
     "darylldoyle/safe-svg": "2.0.1",
     "humanmade/cavalcade": "^2.0",
-    "humanmade/tachyon-plugin": "~0.11.5",
     "humanmade/gaussholder": "^1.1.3",
     "humanmade/rename-images-command": "^0.1.0",
+    "humanmade/tachyon-plugin": "~0.11.5",
     "jazzsequence/altis-cms": "^12.0-beta4",
     "pantheon-systems/pantheon-mu-plugin": "^1.0",
     "pantheon-systems/quicksilver-pushback": "^2",
