--- a/composer.json
+++ b/composer.json
@@ -77,7 +77,10 @@
       ]
     },
     "installer-paths": {
-      "web/wp-content/mu-plugins/{$name}/": ["type:wordpress-muplugin"],
+      "web/wp-content/mu-plugins/{$name}/": [
+        "type:wordpress-muplugin",
+        "altis/consent-api"
+      ],
       "web/wp-content/plugins/{$name}/": ["type:wordpress-plugin"],
       "web/wp-content/themes/{$name}/": ["type:wordpress-theme"],
       "web/private/scripts/quicksilver/{$name}/": ["type:quicksilver-script"]
