require workflow and install the plugins as mu-plugins

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "altis/consent": "^1.0",
     "altis/enhanced-search": "^13.0",
     "altis/seo": "^13.0",
+    "altis/workflow": "^13.0",
     "composer/installers": "*",
     "darylldoyle/safe-svg": "2.0.1",
     "humanmade/cavalcade": "^2.0",
@@ -80,7 +81,10 @@
     "installer-paths": {
       "web/wp-content/mu-plugins/{$name}/": [
         "type:wordpress-muplugin",
-        "altis/consent-api"
+        "altis/consent-api",
+        "humanmade/workflows",
+        "humanmade/publication-checklist",
+        "yoast/duplicate-post"
       ],
       "web/wp-content/plugins/{$name}/": ["type:wordpress-plugin"],
       "web/wp-content/themes/{$name}/": ["type:wordpress-theme"],
