--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,7 @@ web/wp-content/plugins/debug-bar-elasticpress/
 web/wp-content/plugins/elasticpress/
 web/wp-content/plugins/gaussholder/
 web/wp-content/plugins/hm-redirects/
+web/wp-content/plugins/query-monitor/
 web/wp-content/plugins/safe-svg/
 web/wp-content/plugins/simple-local-avatars/
 web/wp-content/plugins/smart-media/
