require altis analytics and analytics segment integration

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,7 @@ web/wp-content/mu-plugins/workflows/
 web/wp-content/plugins/altis-accelerate/
 web/wp-content/plugins/altis-reusable-blocks/
 web/wp-content/plugins/amf-wordpress/
+web/wp-content/plugins/analytics-integration-segment/
 web/wp-content/plugins/asset-loader/
 web/wp-content/plugins/asset-manager-framework/
 web/wp-content/plugins/authorship/
