--- a/composer.json
+++ b/composer.json
@@ -122,12 +122,14 @@
     "post-install-cmd": [
       "@cleanup",
       "WordPressProject\\composer\\ScriptHandler::createRequiredFiles",
-      "@delete-muplugin"
+      "@delete-muplugin",
+      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --no-dev"
     ],
     "post-update-cmd": [
       "@cleanup",
       "WordPressProject\\composer\\ScriptHandler::createRequiredFiles",
-      "@delete-muplugin"
+      "@delete-muplugin",
+      "composer install --working-dir=web/wp-content/mu-plugins/altis-cms --no-dev"
     ],
     "post-create-project-cmd": [
       "@cleanup",
